# miniply2mesh

./: CMakeLists.txt
CMake/Modules/: FindLibMeshb.cmake
src/: main.cpp  read_ply.hpp  reader_meshb.c
tests/: small.ply  small.ply.mesh  small.ply.meshb  small3d.ply  verySmall.ply
